--- a/Application/views/wave_tes/offline.html
+++ b/Application/views/wave_tes/offline.html
@@ -8,7 +8,6 @@
         <title>Wartungsarbeiten</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
-
         <!-- iOS Homescreen Icon (version < 4.2)-->
         <link rel="apple-touch-icon-precomposed" media="screen and (resolution: 163dpi)" href="out/wave/img/favicons/favicon_512x512.png" />
         <!-- iOS Homescreen Icon -->
@@ -56,7 +55,7 @@
                 <div class="row">
                     <div id="content" class="col-xs-12 start">
                         <h1 class="page-header"><i class="icon-cog"></i> Wartungsarbeiten</h1>
-                        <p>Es werden im Moment Wartungsarbeiten an unserem Shop durchgeführt. Wir bitten um Ihr Verständnis und danken für Ihre Geduld. Bitte besuchen Sie uns später erneut</p>
+                        <p>Es werden im Moment Wartungsarbeiten an unserem Shop durchgeführt. Wir bitten um Ihr Verständnis und danken für Ihre Geduld. Bitte besuchen Sie uns später erneut.</p>
                     </div>
                 </div>
             </div>
